Adding examples
